--- a/GamePluginIOS/Assets/en.lproj/Localizable.strings
+++ b/GamePluginIOS/Assets/en.lproj/Localizable.strings
@@ -15,8 +15,7 @@
 2. Enable the internet toggle of your devices.
 3. Enable the permission of internet with this app.";
 "check_lockiap" = "Please enable In-App Purchases in your device restrictions settings.";
-"iap_exist" = "There is an payment is in progress, try again later";
-"iap_failed" = "In-App purchase is failed. see detail below: %@";
-"iap_request_failed" = "Request Products Failed! %@";
+"iap_exist" = "There is an payment in progress, try again later.";
+"iap_request_failed" = "Request Products Failed.";
 "iap_invalid_product" = "The Product Identifier is invalid.";
 "bad_network" = "Your network is not good, please be patient.";
